--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Jimmy Mi
+name: misoso
 
 # Short bio or description (displayed in the header)
-description: This is Jimmy's private blog at github.
+description: This is misoso's private blog at github.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: images/avatar.png
+avatar: https://avatars.githubusercontent.com/u/43238203
 
 #
 # Flags below are optional
