fixed blog header desc

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: misoso
 
 # Short bio or description (displayed in the header)
-description: This is misoso's private blog at github.
+description: This is misoso's private blog on github.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars.githubusercontent.com/u/43238203
